4.1
 * Add broadcast_rpc_address to system.local (CASSANDRA-11181)
 * Add support for type casting in WHERE clause components and in the values of INSERT/UPDATE statements (CASSANDRA-14337)
 * add credentials file support to CQLSH (CASSANDRA-16983)
 * Skip remaining bytes in the Envelope buffer when a ProtocolException is thrown to avoid double decoding (CASSANDRA-17026)
 * Allow reverse iteration of resources during permissions checking (CASSANDRA-17016)
 * Add feature to verify correct ownership of attached locations on disk at startup (CASSANDRA-16879)
 * Make SSLContext creation pluggable/extensible (CASSANDRA-16666)
 * Add soft/hard limits to local reads to protect against reading too much data in a single query (CASSANDRA-16896)
 * Avoid token cache invalidation for removing a non-member node (CASSANDRA-15290)
 * Allow configuration of consistency levels on auth operations (CASSANDRA-12988)
 * Add number of sstables in a compaction to compactionstats output (CASSANDRA-16844)
 * Upgrade Caffeine to 2.9.2 (CASSANDRA-15153)
 * Allow DELETE and TRUNCATE to work on Virtual Tables if the implementation allows it (CASSANDRA-16806)
 * Include SASI components to snapshots (CASSANDRA-15134)
 * Fix missed wait latencies in the output of `nodetool tpstats -F` (CASSANDRA-16938)
 * Reduce native transport max frame size to 16MB (CASSANDRA-16886)
 * Add support for filtering using IN restrictions (CASSANDRA-14344)
 * Provide a nodetool command to invalidate auth caches (CASSANDRA-16404)
 * Catch read repair timeout exceptions and add metric (CASSANDRA-16880)
 * Exclude Jackson 1.x transitive dependency of hadoop* provided dependencies (CASSANDRA-16854)
 * Add client warnings and abort to tombstone and coordinator reads which go past a low/high watermark (CASSANDRA-16850)
 * Add TTL support to nodetool snapshots (CASSANDRA-16789)
 * Allow CommitLogSegmentReader to optionally skip sync marker CRC checks (CASSANDRA-16842)